[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lyricsgenius"
version = "3.7.1"
dependencies = ["beautifulsoup4>=4.12.3", "requests>=2.27.1"]
requires-python = ">=3.10"
authors = [{ name = "John W. R. Miller", email = "john.w.millr+lg@gmail.com" }]
description = "Download lyrics and metadata from Genius.com"
readme = "README.md"
license = "MIT"
keywords = [
    "lyrics",
    "lyricsgenius",
    "genius",
    "genius-api",
    "genius-lyrics",
    "download-lyrics",
    "download-song-lyrics",
    "scraping-lyrics",
    "song-lyrics",
]

[project.optional-dependencies]
docs = ["sphinx>=4.3.2", "sphinx-rtd-theme>=1.3.0"]
checks = [
    "doc8>=0.11.2",
    "flake8>=4.0.1",
    "flake8-bugbear>=22.9.23",
    "pygments>=2.14.0",
    "tox>=3.28.0",
]

[project.urls]
Homepage = "https://www.johnwmillr.com/scraping-genius-lyrics/"
Documentation = "https://lyricsgenius.readthedocs.io/en/master/"
Repository = "https://github.com/johnwmillr/LyricsGenius"
Issues = "https://github.com/johnwmillr/LyricsGenius/issues"

[dependency-groups]
dev = [
    "doc8>=0.11.2",
    "flake8>=4.0.1",
    "flake8-bugbear>=22.9.23",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pygments>=2.14.0",
    "pytest>=8.4.1",
    "ruff>=0.11.4",
    "sphinx>=4.3.2",
    "sphinx-rtd-theme>=1.3.0",
    "tox>=3.28.0",
    "types-html5lib>=1.1.11.20241018",
    "types-requests>=2.32.0.20250328",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/p/lyricsgenius/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pyright]
typeCheckingMode = "off"
ignore = ["*"]
